tests/invalid/subtype_foreign_supertype_2.err_exp2
subtype_foreign_supertype_2.m:017: Error: [38;5;87m`fruit'/0[39;49m [38;5;203mcannot be a supertype[39;49m
subtype_foreign_supertype_2.m:017:   because it is a [38;5;203mforeign type.[39;49m
